fix(tasks): allow overriding docker default (#31)